Updated styles, added isolation prop to prevent z-index error

--- a/src/components/Button/index.module.scss
+++ b/src/components/Button/index.module.scss
@@ -12,6 +12,9 @@ button {
     overflow: hidden;
     height: fit-content;
 
+    // Allows us to create a custom stacking context for the z-index
+    isolation: isolate;
+
     // Added transparent background to allow the before and after pseudo classes background to take presedence
     background-color: transparent;
 
@@ -47,8 +50,8 @@ button {
     }
 
     &:focus-visible {
-      outline: 0.07em solid $blue_500;
-      outline-offset: 0.08em;
+      outline: 0.1em solid $blue_500;
+      outline-offset: 0.12em;
     }
   }
 }
